# master_thesis

exemplar-LDA/: README.md  bndbox_bottle.txt  exemplar_LDA.m  getRankList.m  initWorkspaceWHOGeneric.m  original_demo.m
exemplar-LDA/detect/: test_dataset.m
exemplar-LDA/features/: fconv2D.mexmaci64  fconv3D.mexmaci64  featuresHOGColor.mexmaci64  (+5 more)
hypercolumns/: draw_fig.py  test_generated_hypercolumn.py  test_generated_sift.py  test_image_clustering.py  test_image_clustering_no_threshold.py  test_pascal_hypercolumns.py  test_pascal_robust_noise.py  test_pascal_sift.py  test_places_hypercolumns.py  test_places_sift.py  voc_utils.py
prototype_matlab/: Y.mat  aeroplane_dist_negs.txt  backup.m  banana.txt  car.txt  convertNamesPaths.sh  cow_diff_neg.txt  cow_sim_neg.txt  data.mat  deep_banana.txt  deep_car.txt  des_num.mat  desc_cnt.csv  descriptors_m.csv  find_besk_k.m  generate_images_v1.m  generate_images_v2.m  generate_images_v3.m  generate_labels.m  generated_v1.txt  generated_v2.txt  generated_v3_1.txt  generated_v3_2.txt  generated_v3_3.txt  generated_v3_4.txt  generated_v3_5.txt  generated_v3_6.txt  hsvHistogram.m  imrotate255.m  main_color_histo_trial.m  main_deep.m  main_hog.m  main_hsvHist.m  main_lift.m  main_msd.m  main_sift_v1.m  main_sift_v2.m  test_4_h5.m  test_4_mser.m  time.m
random_walk/: .cproject  .project  CMakeLists.txt  README.txt
random_walk/src/: img_classification.cpp  random_walk.cpp
visualization/: draw_histogram.py  feature_visualization.py  inception_v3_extracte_features.py  vgg16_tf_img_classification.py  vgg16_tf_keras.py
(+1320 files in other folders)
